crates/otter-vm/tests/compile_fail/gc_handle_is_not_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/compile_fail/gc_handle_is_not_send.rs:10:17
   |
10 |     assert_send(handle);
   |     ----------- ^^^^^^ `*const ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Gc<()>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `Gc<()>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/gc_handle_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`
